[gd_scene load_steps=12 format=3 uid="uid://b1yonn763q8be"]

[ext_resource type="Script" uid="uid://taa2vhi8lxto" path="res://objetos/characters/shooter/shooter.gd" id="1_72hgb"]
[ext_resource type="Texture2D" uid="uid://cg55lybvmlt0n" path="res://sprites/characters/mundo 0/shooter.png" id="2_qcgs2"]

[sub_resource type="Animation" id="Animation_sae0v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Shooter:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.186667, 0.24)]
}

[sub_resource type="Animation" id="Animation_rjjjd"]
resource_name = "Shoot"
length = 0.21
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Shooter:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.186667, 0.24), Vector2(0.186667, 0.156667)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"disparar"
}]
}

[sub_resource type="Animation" id="Animation_8mdte"]
resource_name = "caminar"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Shooter:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.186667, 0.24), Vector2(0.186667, 0.171111), Vector2(0.186667, 0.24)]
}

[sub_resource type="Animation" id="Animation_iyvs0"]
resource_name = "default"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_psosv"]
_data = {
&"RESET": SubResource("Animation_sae0v"),
&"Shoot": SubResource("Animation_rjjjd"),
&"caminar": SubResource("Animation_8mdte"),
&"default": SubResource("Animation_iyvs0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dxvhq"]
size = Vector2(23.9241, 53.7729)

[sub_resource type="CircleShape2D" id="CircleShape2D_gm2mo"]
radius = 15.3485

[sub_resource type="CircleShape2D" id="CircleShape2D_q1p3w"]
radius = 80.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1p3w"]
size = Vector2(42, 54)

[node name="Shooter" type="CharacterBody2D"]
scale = Vector2(1.22229, 1)
collision_layer = 2
collision_mask = 9
script = ExtResource("1_72hgb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Distance/CollisionShape2D2")
libraries = {
&"": SubResource("AnimationLibrary_psosv")
}

[node name="Shooter" type="Sprite2D" parent="."]
position = Vector2(7.10543e-15, 2)
scale = Vector2(0.186667, 0.24)
texture = ExtResource("2_qcgs2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 3.5)
scale = Vector2(1.12857, 0.650886)
shape = SubResource("RectangleShape2D_dxvhq")

[node name="DetectionZone" type="Area2D" parent="."]
scale = Vector2(0.84, 0.720001)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
position = Vector2(0, 1)
scale = Vector2(-16.3302, -23.6495)
shape = SubResource("CircleShape2D_gm2mo")

[node name="InteractionArea" type="Area2D" parent="."]
scale = Vector2(1.94608, 2.37052)
collision_layer = 2
collision_mask = 9

[node name="CollisionShape2D2" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, 1.26555)
shape = SubResource("CircleShape2D_q1p3w")

[node name="Distance" type="Area2D" parent="."]
scale = Vector2(1.03251, 1.23714)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Distance"]
position = Vector2(0, 2.42495)
shape = SubResource("CircleShape2D_q1p3w")

[node name="hurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_q1p3w")

[connection signal="body_entered" from="DetectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
[connection signal="body_entered" from="Distance" to="." method="_on_distance_body_entered"]
[connection signal="body_exited" from="Distance" to="." method="_on_distance_body_exited"]
[connection signal="body_entered" from="hurtBox" to="." method="_on_hurt_box_body_entered"]
